# bibliophilia

./: .env  .gitignore  Dockerfile  Makefile  README.md  clear.bat  docker-compose.yml  pyproject.toml  rebuild.bat
backend/: Dockerfile  main.py  main_deprecated.py  pyproject.toml  requirements.txt
backend/bibliophilia/: .env  api.py  config.py  main.py
backend/bibliophilia/books/: api.py  dependencies.py  settings.py
backend/bibliophilia/books/data/: repositories.py
backend/bibliophilia/books/data/store/: interfaces.py  storages.py
backend/bibliophilia/books/domain/: boundaries.py  services.py
backend/bibliophilia/books/domain/entity/: facet.py
backend/bibliophilia/books/domain/models/: basic.py  input.py  output.py  schemas.py
backend/bibliophilia/books/domain/utils/: parse.py  security.py  texttokeniser.py
backend/bibliophilia/books/utils/: parser.py
backend/bibliophilia/core/: dependencies.py  models.py
backend/bibliophilia/server/: __init__.py  dependencies.py  main.py  settings.py
backend/bibliophilia/server/data/repositories/: books.py
backend/bibliophilia/server/data/storages/: books.py
backend/bibliophilia/server/data/storages/interfaces/: books.py
backend/bibliophilia/server/db/: tables.py
backend/bibliophilia/server/domain/boundaries/: books.py
backend/bibliophilia/server/domain/models/: __init__.py
backend/bibliophilia/server/domain/models/basic/: books.py
backend/bibliophilia/server/domain/models/input/: books.py
backend/bibliophilia/server/domain/models/output/: books.py
backend/bibliophilia/server/domain/models/schemas/: books.py
backend/bibliophilia/server/domain/services/: books.py
backend/bibliophilia/server/routers/: books.py
backend/bibliophilia/server/utils/: __init__.py  parser.py
backend/bibliophilia/server/view/api/routes/: api.py  auth.py  books.py
backend/bibliophilia/users/: api.py  dependencies.py  settings.py
backend/bibliophilia/users/api/: .env  __init__.py  google_auth.py  group.py  interaction.py  review.py  session.py
backend/bibliophilia/users/data/: repositories.py
backend/bibliophilia/users/data/store/: interfaces.py  storages.py
backend/bibliophilia/users/domain/: boundaries.py  services.py
backend/bibliophilia/users/domain/models/: basic.py  input.py  output.py  schemas.py  shemas.py
backend/bibliophilia/users/utils/: update_rating.py
backend/books/: admin.py  api.md  models.py  search_indexes.py  serializers.py  services.py  services_deprecated.py  usecases.py  usecases_deprecated.py  views.py
backend/books/templates/indexes/books/: book_text.txt
backend/core/: settings.py  urls.py
bibliophilia/public/: index.html
bibliophilia/src/: App.js
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/component/: BookInfoPage.js  CategoryWindow.js  HomePage.js  Search.js  SearchBar.js  SearchResultsPage.js  UploadBooks.js
frontend/src/component/Books-Component/: UploadBooks.js
frontend/src/page/: BookInfoPage.js  HomePage.js  SearchResultsPage.js
library_project/library_project/: settings.py  urls.py
(+25 files in other folders)
