[tool.poetry]
name = "bibliophilia"
version = "0.1.0"
description = ""
authors = ["BaDum-Tss","rafi2002", "Pechenuxa1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
elasticsearch = "^8.10.1"
djangorestframework = "^3.14.0"
books = "^0.1.2"
django-haystack = "^3.2.1"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
fastapi = "^0.104.1"
elasticsearch-dsl = "^8.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
