[tool.poetry]
name = "rdts-server"
version = "1.0.0"
description = ""
authors = ["BaDum-Tss <99732685+BuDum-Tss@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bibliophilia"}]

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = "^0.104.1"
sqlmodel = "^0.0.12"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
psycopg2-binary = "^2.9.9"
elasticsearch = "^8.10.4"
elasticsearch-dsl = "^8.10.4"
python-multipart = "^0.0.6"
spacy = "^3.7.2"
python-docx = "^1.1.0"
pypdf2 = "^3.0.1"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.2"
authlib = "^1.3.0"
itsdangerous = "2.1.2"
httpx = "0.27.0"
en-core-web-sm = {path = "resources/en_core_web_sm-3.7.1.tar.gz"}
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
